src/command/snapshots/dss__command__parser__tests__cmd_parsing_for_bg_process_invocation.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "ping",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            0,
                            3,
                        ),
                    },
                    Token {
                        lexeme: "google.com",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            5,
                            14,
                        ),
                    },
                ],
                path: "ping",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: Some(
            Background,
        ),
    },
]
