src/command/snapshots/dss__command__parser__tests__cmd_parsing_of_pipe_ops.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "echo",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            0,
                            3,
                        ),
                    },
                    Token {
                        lexeme: "foo",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            5,
                            7,
                        ),
                    },
                ],
                path: "echo",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: Some(
            Pipe,
        ),
    },
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "cat",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            11,
                            13,
                        ),
                    },
                ],
                path: "cat",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: Some(
            Pipe,
        ),
    },
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "cat",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            17,
                            19,
                        ),
                    },
                ],
                path: "cat",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: None,
    },
]
