src/command/snapshots/dss__command__parser__tests__cmd_parsing_of_redirection_read_write_ops_without_fd.snap
---
source: src/command/parser.rs
expression: results
---
[
    ParseResult {
        cmds: [
            Command {
                tokens: [
                    Token {
                        lexeme: "ls",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            0,
                            1,
                        ),
                    },
                    Token {
                        lexeme: "-la",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            3,
                            5,
                        ),
                    },
                ],
                path: "ls",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
            Command {
                tokens: [
                    Token {
                        lexeme: "file.txt",
                        token_type: Word(
                            Text,
                        ),
                        line: 0,
                        range: (
                            10,
                            17,
                        ),
                    },
                ],
                path: "file.txt",
                negate_exit_status: false,
                is_unqualified_path: true,
            },
        ],
        execute_mode: Normal,
        exit_term: false,
        associated_operator: Some(
            RedirectReadWrite(
                None,
            ),
        ),
    },
]
